<resources>
    <string name="app_name">Workout Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="you_haven_t_added_any_workout_yet">You haven\'t added any workout yet</string>
    <string name="try_to_add_your_first_workout">Try to add your first workout</string>
    <string name="add_a_workout">Add a Workout</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="add_an_exercise">Add an Exercise</string>
</resources>